--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 django_faculdade_site/.env
-django_faculdade_site/apps/cad_roupas/migrations
+**/migrations
 db.sqlite3
 *.sqlite3
 **/__pycache__/
